# mcpcm

./: AGENTS.md  PLAN.md  README.md  README.zh-CN.md  human.md  package-lock.json  package.json
api/: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  dependencies.py  main.py  pyproject.toml
api/core/: config.py  errors.py
api/db/: database.py
api/docs/: api-contract.md
api/repositories/: mcp_server_repository.py
api/routers/: ingest.py  query.py
api/schemas/: ingest.py  query.py
api/services/: ingest_service.py  query_service.py
api/tests/: conftest.py  test_health_api.py
api/tests/api/: test_ingest_api.py  test_query_api.py
api/tests/integration/: test_ingest_query_flow.py
api/tests/services/: test_ingest_service.py  test_query_service.py
app/: .gitignore  AGENTS.md  README.md
app/src/: cli.ts  config-writer.ts  types.ts
app/src/__tests__/: commands.test.ts  find.test.ts  telemetry.test.ts  utils.test.ts
app/src/commands/: add.ts  update.ts
cli/: AGENTS.md  LICENSE  README.md  package-lock.json
cli/src/: config-reader.ts  config-writer.ts  telemetry.ts  utils.ts
cli/src/commands/: add.ts  del.ts  find.ts
docs/: openspec-usage-notes.md
openspec/changes/archive/2026-03-24-add-telemetry-on-add/: design.md  proposal.md  (+1 more)
openspec/specs/add-telemetry-ingest/: spec.md
openspec/specs/find-online-query/: spec.md
src/: agents.ts  cli.ts  config-reader.ts
src/__tests__/: agents.test.ts  commands.test.ts  config-reader.test.ts  config-writer.test.ts
src/commands/: add.ts  del.ts  find.ts  list.ts  sync.ts  update.ts
(+5 files in other folders)
