[project]
name = "mcpcm-server"
version = "0.1.0"
description = "FastAPI backend for mcpcm ingest and query"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"routers/*.py" = ["B008"]
